# kokoro-pdf-tts

./: .gitignore  README.md  pdf_tts.py  pyproject.toml
