[project]
name = "kokoro-pdf-tts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "kokoro>=0.9.4",
    "mutagen>=1.47.0",
    "openai-whisper>=20250625",
    "pip>=26.0.1",
    "pymupdf>=1.27.2",
]
